# eval_harness

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  eval-flywheel-plan.md  pyproject.toml
data/: create_questions.py  dataset.jsonl  judge_rubric.json  questions.jsonl  questions.xlsx
docs/superpowers/plans/: 2026-05-18-stage2-dataset-pipeline.md  2026-05-19-html-annotation-tool.md  2026-05-20-unified-web-server.md  2026-05-21-collect-page.md  2026-05-21-questions-crud.md
docs/superpowers/specs/: 2026-05-19-html-annotation-tool-design.md  2026-05-20-unified-web-server-design.md  2026-05-21-collect-page-design.md  2026-05-21-judge-rubric-editor-design.md  2026-05-21-judge-rubric-editor-plan.md  2026-05-21-questions-crud-design.md
eval/: annotate.py  annotate_web.py  judge_web.py  judges.py  schema.py  web.py
eval/collectors/: workflow_collector.py
eval/importers/: excel_importer.py
eval/templates/: annotate.html  collect.html  judge.html
tests/: conftest.py  test_annotate.py  test_annotate_web.py  test_excel_importer.py  test_judge_web.py  test_judges.py  test_rubric.py  test_rubric_api.py  test_schema.py  test_web.py  test_workflow_collector.py
tests/fixtures/: create_test_excel.py
