[project]
name = "customer-service-chat-bot-eval"
version = "0.1.0"
description = "LLM eval flywheel for intelligent_customer RAG chatbot (Stage 1-5 complete)."
readme = "eval-flywheel-plan.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "flask>=3.0.0",
    "anthropic>=0.103.1",
    "openai>=2.37.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: tests that call external APIs (require ANTHROPIC_API_KEY)",
]
